!!!!!!!!!!!!!!!NOTE - NOTE!!!!!!!!!!!!!!!!!!!!!
Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp and com.tightdb.internal.Util.java
      when the JNI interface is changed.
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

25-October-2013:
================
+ Added addEmptyRow() method to typed table.

13-October-2013:
================
+ dist-deb target in build.sh, updating debian/changelog.in.

09-October-2013:
===============
+ Added support for Async durability in SharedGroup.
+ Added ShareGroup.reserve(bytes)

08-October-2013:
================
+ Added View.where()
+ Added queries on views in the typed interface

27-September-2013:
==================
! BREAKING CHANGE: Removed named column cursors from rows in typed interface. Now only traditional getters/setters are allowed.
! BREAKING CHANGE: Because of the above subtables in Mixed columns are not supported, until a better implementation is made.
! BREAKING CHANGE: Removed shortnames for query methods. (eq, neq, lt, lte, gt, gte).
! BREAKING CHANGE: Renamed Qurey equal to equalTo, and notEqual to notEqualTo.

24-September-2013:
==================
+ Added com.tightdb.Table.equals() and fixed com.tightdb.Group.equals()

23-September-2013:
==================
+ Added com.tightdb.IOException, as a RuntimeException can be thrown from all methods operating on files, like Group(file), SharedGroup(file) etc.

20-September-2013:
==================
+ Added View.getColumnCount(), View.getColumnIndex(colIndex), View.getColumnName(colIndex), View.getColumnType(colIndex) to Dynamic interface
- Removed Table.getColumnCount(), Table.getColumnIndex(colIndex), Table.getColumnName(colIndex), Table.getColumnType(colIndex) from Typed interface
! BREAKING CHANGE: Added limit parameter to all query aggregates which already had a start, and stop parameter.


19-September-2013:
==================