@@ -36,6 +36,23 @@ CATEGORIES :
       EXAMPLES:
       - DESCR  :
         CODE   : ex_java_typed_query_find_first
+
+  - g_typed_query_find_from:
+      TITLE    : findFrom
+      NAMES    : findFrom
+      SUMMARY  : Executes the query starting from the given position.
+      DESCR    : Executes the query. Result is the first matching row from the given position.
+      PARAMS:
+      - NAME   : startPos
+        TYPES  : long
+        DESCR  : Start position (inclusive)
+      RETURN:
+        TYPES  : Row
+        DESCR  : First matching Row (or 'null' if no match)
+      EXAMPLES:
+      - DESCR  :
+        CODE   : ex_java_typed_query_find_from
+
   - g_typed_query_find_all:
       TITLE    : findAll
       NAMES    : findAll
