@@ -6,6 +6,7 @@ Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp an
 25-October-2013:
 ================
 + Added addEmptyRow() method to typed table.
++ Added findFrom() method to typed query
 
 13-October-2013:
 ================
